--- a/javascript/assignment5/index.html
+++ b/javascript/assignment5/index.html
@@ -17,7 +17,7 @@
 		</tr>
 		<tr>
 			<td>Score Total:</td>
-			<td><input type="text" id="txtTotal" class="clearable" disabled/></td>
+			<td><input type="text" id="txtSum" class="clearable" disabled/></td>
 			<td rowspan=4><textarea id="txtOutput" class="clearable" disabled></textarea></td>
 		</tr>
 		<tr>
@@ -35,39 +35,55 @@
 	</table>
 
 	<script>
+		//initializing global array for scores
 		var scores = [];
 		window.onload = function(){
 			$('btnAdd').onclick = addValue;
 			$('btnClear').onclick = clear;
 		}
 		function addValue(){
+			//assign input to variable after trimming off whitespace
 			var newScore = $('txtScore').value.trim();
+			//check that it's an int, not blank, and in range
 			if(isInt(newScore)===true && newScore!="" && newScore<=100 && newScore>=0){
+				//push to array as int
 				scores.push(parseInt(newScore));
+				//initialize another variable for sum
 				var sum = 0;
+				//iterate array of scores
 				for(var i=0;i<scores.length;i++){
 					if(i==0){
+						//first time around, using assignment for soft reset
 						$('txtOutput').value=scores[i]+"\n";
 					}else{
+						//else-wise just appending
 						$('txtOutput').value+=scores[i]+"\n";
 					}
+					//squeezing some more logic out of one loop to find array sum
 					sum += scores[i];
 				}
-				$('txtTotal').value = sum;
+				//assigning values to requisite output fields
+				$('txtSum').value = sum;
 				$('txtCount').value = scores.length;
+				//formatting average to two decimals per spec
 				$('txtAverage').value = (sum/scores.length).toFixed(2);
 			}else{
+				//in case of bad input, let the user know
 				alert("Score must be numeric and between 0 and 100");
 			}
+			//offering a hand back to the top regardless of if/else
 			$('txtScore').focus();
 		}
-
 		function clear(){
+			//rounding up what needs clearing
 			var targets = document.getElementsByClassName('clearable');
+			//iterating through and setting values to blank
 			for (var i=0;i<targets.length;i++){
 				targets[i].value="";
 			}
+			//reset array
 			scores = [];
+			//take it to the top
 			$('txtScore').focus();
 		}
 		//determine if number is an integer
