adding functionality to prevent making right table when it already exists for requested value

--- a/javascript/assignment4/index.html
+++ b/javascript/assignment4/index.html
@@ -48,34 +48,31 @@
     </div>
   </div>
 <script>
+   selectedRate = "";
   window.onload = function(){
     $('btnLeft').onclick = calculate;
     $('btnRight').onclick = calculate;
   };
   function calculate(){
-    //a little bit of DOM traversal to gather up exisiting table rows
+    //a little bit of DOM traversal to gather up existing table rows
     var rows = this.nextElementSibling.getElementsByTagName('tr');
     if(this.id=='btnLeft'){
       //check to see if output has already been provided
       if(rows.length==1){
         //iterating 5-10 rates per assignment spec
-        for(var i=5;i<11;i++){
+        for(var i=5; i<11; i++){
           //running calculation and appending resulting html strings to html of table
           $('tblLeft').innerHTML+=populateTable(i);
         }
       }
     }else if(this.id=='btnRight'){
-      //table reset on each call after the first
-      if(rows.length>1){
-        $('tblRight').innerHTML = "<tr><th>Year</th><th>Amount on Deposit</th><th>Interest Rate</th></tr>";
-      }
       //gather potential options
       var radios = document.getElementsByName('interestRate');
       //iterate through those options looking for checked rate
       for (var i=0; i<radios.length; i++){
-        if (radios[i].checked){
+        if(radios[i].checked){
           //should we find one, use rate found for math and exit loop
-          $('tblRight').innerHTML += populateTable(radios[i].value);
+          var selectedRate = radios[i].value/100;
           break;
         }
         //check for reaching end of array without checked input
@@ -85,15 +82,23 @@
           radios[0].focus();
         }
       }
+      if(rows.length == 1){
+         $('tblRight').innerHTML+= populateTable(radios[i].value);
+         console.log("ran");
+      }else if(selectedRate != parseFloat($('tblRight').children[1].firstChild.lastChild.innerHTML)){
+        $('tblRight').innerHTML = "<tr><th>Year</th><th>Amount on Deposit</th><th>Interest Rate</th></tr>";
+        $('tblRight').innerHTML += populateTable(radios[i].value);
+        console.log("ran");
+      }
     }
     function populateTable(rate){
       //initialize variables, principal of $1000 used per assignment spec
       var result = "";
       var cash = 1000;
       //create 10 rows each function call
-      for(var i=1;i<11;i++){
+      for(var i=1; i<11; i++){
         //doing the math and assigning to current cash value
-        cash *= (1+rate/100);
+        cash *= (1 + rate/100);
         //returning result as table row in html
         result += "<tr><td>" + i + "</td><td>" + cash.toFixed(2) + "</td><td>" + (rate/100).toFixed(2) + "</td></tr>";
       }
