--- a/javascript/assignment4/index.html
+++ b/javascript/assignment4/index.html
@@ -33,12 +33,12 @@
     <div id="right">
         <h3>Assignment 4b</h3>
         <p>Calculate Ending cash value table for $1000 over 10 years using selected interest rate</p>
-        <input type="radio" id="rad5" name="interestRate" value="5">5%</input>
-        <input type="radio" id="rad6" name="interestRate" value="6">6%</input>
-        <input type="radio" id="rad7" name="interestRate" value="7">7%</input>
-        <input type="radio" id="rad8" name="interestRate" value="8">8%</input>
-        <input type="radio" id="rad9" name="interestRate" value="9">9%</input>
-        <input type="radio" id="rad10" name="interestRate" value="10">10%</input>
+        <input type="radio"  name="interestRate" value="5">5%</input>
+        <input type="radio"  name="interestRate" value="6">6%</input>
+        <input type="radio"  name="interestRate" value="7">7%</input>
+        <input type="radio"  name="interestRate" value="8">8%</input>
+        <input type="radio"  name="interestRate" value="9">9%</input>
+        <input type="radio"  name="interestRate" value="10">10%</input>
         <br>
         <br>
         <input type="button" id="btnRight" value="Calculate"/>
@@ -70,36 +70,42 @@
       //iterate through those options looking for checked rate
       for (var i=0; i<radios.length; i++){
         if(radios[i].checked){
-          //should we find one, use rate found for math and exit loop
-          var selectedRate = radios[i].value/100;
+          //should we find one, we'll put it somewhere for safe keeping and exit loop
+          var selectedRate = radios[i].value;
           break;
         }
         //check for reaching end of array without checked input
         if(radios[i] == radios[radios.length-1]){
-          //inform the user that input is required and direct to first input option
+          //inform the user that input is required and set focus to first input option
           alert("You must select a rate to proceed");
           radios[0].focus();
         }
       }
-      if(rows.length == 1){
-        //append results of function call to table the first time around
-        $('tblRight').innerHTML += populateTable(selectedRate);
-      }else if(selectedRate != parseFloat($('tblRight').children[1].firstChild.lastChild.innerHTML)){
-        //if another table already exists, reset the table, then append results function call
-        $('tblRight').innerHTML = "<tr><th>Year</th><th>Amount on Deposit</th><th>Interest Rate</th></tr>";
-        $('tblRight').innerHTML += populateTable(selectedRate);
+      if(selectedRate){
+        //check for existing table
+        if(rows.length == 1){
+          //just appending results of function call to table the first time around
+          $('tblRight').innerHTML += populateTable(selectedRate);
+        //braving traversal hell to ensure we don't waste time creating the same table twice frivolously
+        }else if(selectedRate/100 != parseFloat($('tblRight').children[1].firstChild.lastChild.innerHTML)){
+            //if another table already exists, reset the table, then append results of function call
+            $('tblRight').innerHTML = "<tr><th>Year</th><th>Amount on Deposit</th><th>Interest Rate</th></tr>";
+            $('tblRight').innerHTML += populateTable(selectedRate);
+        }
       }
     }
     function populateTable(rate){
       //initialize variables, principal of $1000 used per assignment spec
       var result = "";
       var cash = 1000;
+      //making rate decimal value
+      rate /= 100;
       //create 10 rows each function call
       for(var i=1; i<11; i++){
         //doing the math and assigning to current cash value
-        cash *= (1 + rate);
+        cash *= 1 + rate;
         //returning result as table row in html
-        result += "<tr><td>" + i + "</td><td>" + cash.toFixed(2) + "</td><td>" + (rate).toFixed(2) + "</td></tr>";
+        result += "<tr><td>" + i + "</td><td>" + cash.toFixed(2) + "</td><td>" + rate.toFixed(2) + "</td></tr>";
       }
       return result;
     }
